edit and update driver

--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -9,6 +9,7 @@
 <% end %></span>
 <span> Total earnings: <%= @driver.total_earnings%></span>
 <span> Average Ratings: <%= @driver.average_ratings%></span>
+<span><%= link_to "Edit", edit_driver_path(@driver.id)  %></span>
 <span><%= link_to "Delete", driver_path(@driver.id), method: :delete, data: {confirm: "Are you sure?"} %></span>
 </li>
 </ul>
