added index, show, add new for passengers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
   <li><%= link_to "View all Drivers", drivers_path %></li>
   <li><%= link_to "Add a Driver", new_driver_path %> </li>
   
-  <li>View all Passengers</li>
-  <li>Add a Passenger</li>
+  <li><%= link_to "View all Passengers", passengers_path %></li>
+    <li><%= link_to "Add a Passenger", new_passenger_path %> </li>
   </ul>
   </nav>
     <%= yield %>
