--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -1,3 +1,16 @@
 <h2>Add a Driver</h2>
-
+<% if @driver.errors.any? %>
+  <h3>Please try again:</h3>
+  <ul>
+    
+      <% @driver.errors.messages.each do |k, v| %>
+        <% v.each do |msg| %>
+        <li>
+          <strong> <%= k %>:</strong> <%= msg %>
+          </li>
+        <% end %>
+      
+    </ul>
+  <%end%>
+<%end%>
 <%= render 'form' %>
