added delete passenger and basic tests for controller

--- a/app/views/passengers/_form.html.erb
+++ b/app/views/passengers/_form.html.erb
@@ -4,8 +4,8 @@
     <%= f.label :name, "Passenger name (required):", class: 'passenger-label'%>
     <%= f.text_field :name, placeholder: "Joe Schmo", class: 'passenger-input'%>
  
-    <%= f.label :phone, "Phone Number:", class: 'passenger-label' %>
-    <%= f.text_field :phone, placeholder: "1234567890", class: 'passenger-input' %>
+    <%= f.label :phone_num, "Phone Number:", class: 'passenger-label' %>
+    <%= f.text_field :phone_num, placeholder: "1234567890", class: 'passenger-input' %>
  
   <%= f.submit "Save", class: 'save-button' %>
 <% end %>
