added validation check to edit driver

--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -1,3 +1,18 @@
+<% if @driver.errors.any? %>
+  <h3>Please try again:</h3>
+  <ul>
+    
+      <% @driver.errors.messages.each do |k, v| %>
+        <% v.each do |msg| %>
+        <li>
+          <strong> <%= k %>:</strong> <%= msg %>
+          </li>
+        <% end %>
+      
+    </ul>
+  <%end%>
+<%end%>
+
 <%= form_with model: @driver, class: 'driver-form' do |f| %>
   
 
