--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,80 @@
  *= require_tree .
  *= require_self
  */
+body {
+    margin: auto;
+    padding: auto;
+}
+
+ body, a {
+     font-family: 'Montserrat', sans-serif;
+ }
+
+ h1, h2, h3, h4, h5, h6 {
+     text-align: center;
+    font-family: 'ZCOOL KuaiLe', cursive;
+ }
+ 
+.main_logo {
+    font-family: 'ZCOOL KuaiLe', cursive;
+    color: white;
+    display: inline;
+    font-size: 2em;
+    margin: 25px;
+    text-decoration: none;
+ }
+
+nav {
+    background-color: rgb(52, 6, 68);
+}
+
+ /* Dropdown Button */
+.dropbtn {
+    background-color: rgb(52, 6, 68);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    font-family: "Montserrat", sans-serif;
+    border: none;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: rgb(77, 9, 100);}
+
+  main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+
+  
