--- a/app/assets/stylesheets/drivers.scss
+++ b/app/assets/stylesheets/drivers.scss
@@ -1,3 +1,41 @@
 // Place all the styles related to the Drivers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ul.detail-list {
+    box-shadow: 2px 2px 5px grey;
+    margin: 0;
+    padding: 0;
+    width: 50vw;
+    border-radius: 25px;    
+}
+
+.driver-details {
+    display: grid;
+    grid-template: 100px 50px 1fr / 1fr 1fr 1fr 100px 100px;
+    text-align: center;
+    background-color: lightgrey;
+    margin: 10px;
+}
+
+.driver-details span {
+    padding: 20px;
+}
+
+.main-list  {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 200vh; 
+}
+
+
+#name {
+    background-color: rgb(121, 110, 245);
+    color: white;
+    grid-column: span 5;
+    text-align: center;
+}
