--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,4 +1,4 @@
-<h1>driver index</h1>
+<h1>Driver Index</h1>
 <ul class="main-list">
 <% @drivers.each do |driver| %>
 <li> <%=driver.id %>  <%= link_to driver.name, driver_path(driver) %> </li>
