--- a/app/views/passengers/index.html.erb
+++ b/app/views/passengers/index.html.erb
@@ -1,5 +1,5 @@
-<h2>Passenger Index</h2>
-<ul>
+<h1>Passenger Index</h1>
+<ul class="main-list">
 <% @passengers.each do |passenger| %>
 <li> <%=passenger.id %>  <%= link_to passenger.name, passenger_path(passenger) %> </li>
 <% end %>
