edit and show trip

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,15 +1,22 @@
 <h2>Trip Details</h2>
 
-<ul class="detail-list">
+<ul id="trip-list">
 <li class="trip-details">
 
 <span id="name"><h2>Trip <%= @trip.id %></h2></span>
+<span>Driver</span>
+<span>Passenger</span>
+<span>Rating</span>
+<span>Cost</span>
+<span></span>
+<span></span>
 
-<span><%= @trip.driver_id %></span>
-<span><%= @trip.passenger_id %></span>
+<span><%= link_to Driver.find_by(id: @trip.driver_id).name, driver_path(@trip.driver_id) %></span>
+<span><%= link_to Passenger.find_by(id: @trip.passenger_id).name, passenger_path(@trip.passenger_id) %></span>
 <span><%= @trip.rating %></span>
 <span><%= @trip.cost %></span>
 <span><%= link_to "Edit", edit_trip_path(@trip.id) %></span>
 <span><%= link_to "Delete", trip_path(@trip.id) %></span>
+
 </li>
 </ul>
