--- a/app/assets/stylesheets/trips.scss
+++ b/app/assets/stylesheets/trips.scss
@@ -12,7 +12,7 @@ ul.detail-list {
 
 .trip-details {
     display: grid;
-    grid-template: 100px 50px 1fr / 1fr 1fr 1fr 100px 100px;
+    grid-template: 100px 50px 1fr / 1fr 1fr 1fr 1fr 100px 100px;
     text-align: center;
     background-color: lightgrey;
     margin: 10px;
@@ -36,6 +36,6 @@ ul.detail-list {
 #name {
     background-color: rgb(121, 110, 245);
     color: white;
-    grid-column: span 5;
+    grid-column: span 6;
     text-align: center;
 }
