fixing create for trip

--- a/app/views/passengers/show.html.erb
+++ b/app/views/passengers/show.html.erb
@@ -1,17 +1,20 @@
 <h2>Passenger Details</h2>
-
 <ul class="detail-list">
-<li class="passenger-details">
-<span id="name"><h2><%= @passenger.name %></h2></span>
-<span><strong>Trips</strong></span>
-<span id="charges"><strong>Total Charges</strong></span>
-<span></span>
-<span></span>
-<span></span>
-
-<span><% @passenger.trips.each do |trip| %>
-    <%= link_to trip.id, trip_path(trip.id) %>
-<% end %></span>
-<span><%= @passenger.amount_charged%></span>
-<span><%= link_to "Edit", edit_passenger_path(@passenger.id)  %></span>
-<span><%= link_to "Delete", passenger_path(@passenger.id), method: :delete, data: {confirm: "Are you sure?"} %></span>
+  <li class="passenger-details">
+    <span id="name">
+      <h2><%= @passenger.name %></h2>
+    </span>
+    <span><strong>Trips</strong></span>
+    <span id="charges"><strong>Total Charges</strong></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span><% @passenger.trips.each do |trip| %>
+        <%= link_to trip.id, trip_path(trip.id) %>
+      <% end %></span>
+    <span><%= @passenger.amount_charged%></span>
+    <span><%= link_to "Edit", edit_passenger_path(@passenger.id)  %></span>
+    <span><%= link_to "Delete", passenger_path(@passenger.id), method: :delete, data: {confirm: "Are you sure?"} %></span>
+    <span><%=link_to "Create a New Trip", passenger_trips_path(@passenger.id), method: :post %></span>
+    </li>
+  </ul>
