--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -16,7 +16,7 @@
 <span><%= @trip.rating %></span>
 <span><%= @trip.cost %></span>
 <span><%= link_to "Edit", edit_trip_path(@trip.id) %></span>
-<span><%= link_to "Delete", trip_path(@trip.id) %></span>
+<span><%= link_to "Delete", trip_path(@trip.id), method: :delete, data: { confirm: "Are you sure you want to delete this trip?" } %></span>
 
 </li>
 </ul>
