--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,10 +1,3 @@
 <h2>Edit Trip</h2>
 
-
-<%= form_with model: @trip, class: 'trip-form' do |f| %>
-  
-<%= f.label :rating %>
-    <%= f.select :author_id, Author.all.map{ |auth| [auth.name, auth.id] } %>
-    
-  <%= f.submit "Save", class: 'save-button' %>
-<% end %>
+<%= render 'trip-edit-form' %>
