--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -13,7 +13,14 @@
 
 <span><%= link_to Driver.find_by(id: @trip.driver_id).name, driver_path(@trip.driver_id) %></span>
 <span><%= link_to Passenger.find_by(id: @trip.passenger_id).name, passenger_path(@trip.passenger_id) %></span>
-<span><%= @trip.rating %></span>
+<span>
+    <% if @trip.rating %>
+    <%= @trip.rating %>
+    <% else %>
+    <%= link_to "Add Rating", edit_trip_path %>
+    <% end %>
+
+</span>
 <span><%= @trip.cost %></span>
 <span><%= link_to "Edit", edit_trip_path(@trip.id) %></span>
 <span><%= link_to "Delete", trip_path(@trip.id), method: :delete, data: { confirm: "Are you sure you want to delete this trip?" } %></span>
