--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -4,18 +4,45 @@
 <li class="driver-details">
 
 <span id="name"><h2><%= @driver.name %></h2></span>
-<span><strong>Trips</strong></span>
+<span><strong>Total Trips</strong></span>
 <span><strong>Earnings</strong></span>
 <span><strong>Average Rating</strong></span>
 <span></span>
 <span></span>
-
-<span id="trips"><% @driver.trips.each do |trip| %>
-    <%= link_to trip.id, trip_path(trip.id) %>
-<% end %></span>
+<span></span>
+<span><%= @driver.trips.count %></span>
 <span id="earnings"><%= @driver.total_earnings%></span>
 <span id="ratings"><%= @driver.average_ratings%></span>
 <span id="edit"><%= link_to "Edit", edit_driver_path(@driver.id)  %></span>
 <span id="delete"><%= link_to "Delete", driver_path(@driver.id), method: :delete, data: {confirm: "Are you sure?"} %></span>
 </li>
 </ul>
+
+<table class ="trips">
+  <thead>
+    <tr>
+    <th> ID </th>
+    <th> Date </th>
+    <th> Driver </th>
+    <th> Passenger </th>
+    <th> Price </th>
+    <th> Rating </th>
+    <th> Edit </th>
+    <th> Delete </th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @driver.trips.each do |trip| %>
+    <tr>
+    <td> <%= link_to trip.id, trip_path(trip.id) %> </td>
+    <td> <%= trip.date %> </td>
+    <td> <%= trip.driver.name %> </td>
+    <td> <%= trip.passenger.name %> </td>
+    <td> <%= trip.cost %> </td>
+    <td> <%= trip.rating %> </td>
+    <td><%= link_to "Edit", edit_trip_path(trip.id) %></td>
+    <td><%= link_to "Delete", trip_path(trip.id), method: :delete, data: { confirm: "Are you sure you want to delete this trip?" } %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
