--- a/app/views/passengers/show.html.erb
+++ b/app/views/passengers/show.html.erb
@@ -4,14 +4,13 @@
     <span id="name">
       <h2><%= @passenger.name %></h2>
     </span>
-    <span><strong>Trips</strong></span>
+    <span><strong>Total Trips</strong></span>
     <span id="charges"><strong>Total Charges</strong></span>
     <span></span>
     <span></span>
     <span></span>
-    <span><% @passenger.trips.each do |trip| %>
-        <%= link_to trip.id, trip_path(trip.id) %>
-      <% end %></span>
+    <span></span>
+    <span><%= @passenger.trips.count %></span>
     <span><%= @passenger.amount_charged%></span>
     <span><%= link_to "Edit", edit_passenger_path(@passenger.id)  %></span>
     <span><%= link_to "Delete", passenger_path(@passenger.id), method: :delete, data: {confirm: "Are you sure?"} %></span>
@@ -42,8 +41,8 @@
     <td> <%= trip.passenger.name %> </td>
     <td> <%= trip.cost %> </td>
     <td> <%= trip.rating %> </td>
-    <td> <%= link_to "Edit", edit_passenger_path(@passenger.id)  %> </td>
-    <td><%= link_to "Delete", passenger_path(@passenger.id), method: :delete, data: {confirm: "Are you sure?"} %></td>
+    <td><%= link_to "Edit", edit_trip_path(trip.id) %></td>
+    <td><%= link_to "Delete", trip_path(trip.id), method: :delete, data: { confirm: "Are you sure you want to delete this trip?" } %></td>
     </tr>
     <% end %>
   </tbody>
