--- a/app/assets/stylesheets/drivers.scss
+++ b/app/assets/stylesheets/drivers.scss
@@ -22,14 +22,22 @@ ul.detail-list {
     padding: 20px;
 }
 
-.main-list  {
+.main-list li {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    height: 200vh; 
+    display: inline-block;
+    padding-top: 10px;
+    border-bottom: 1px solid black;
+    // display: flex;
+    // flex-direction: column;
+    // flex-wrap: wrap;
+    // height: 200vh; 
+}
+
+a {
+    text-decoration: none;
+    color: grey;
 }
 
 
