--- a/app/assets/stylesheets/passengers.scss
+++ b/app/assets/stylesheets/passengers.scss
@@ -29,13 +29,11 @@ ul.detail-list {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    // display: flex;
-    // flex-direction: column;
-    // flex-wrap: wrap;
-    height: 200vh; 
+    display: inline-block;
+    padding-top: 10px;
+    border-bottom: 1px solid black;
     width: 100vw;
 }
-
 
 #name {
     background-color: rgb(43, 114, 87);
