--- a/app/views/passengers/show.html.erb
+++ b/app/views/passengers/show.html.erb
@@ -39,7 +39,7 @@
     <td> <%= trip.date %> </td>
     <td> <%= trip.driver.name %> </td>
     <td> <%= trip.passenger.name %> </td>
-    <td> <%= trip.cost %> </td>
+    <td> <%= "#{ format("$%.2f", trip.cost/100.0)}" %> </td>
     <td> <%= trip.rating %> </td>
     <td><%= link_to "Edit", edit_trip_path(trip.id) %></td>
     <td><%= link_to "Delete", trip_path(trip.id), method: :delete, data: { confirm: "Are you sure you want to delete this trip?" } %></td>
